--- a/.github/workflows/github-ci-pull-req.yml
+++ b/.github/workflows/github-ci-pull-req.yml
@@ -24,8 +24,8 @@ jobs:
       - uses: actions/checkout@master
       - name: Set env
         run: |
-          echo ::set-env name=RELEASE_VERSION::${BUILD_VERSION}
-          echo ::set-env name=ARTIFACT::$(echo ${DOCS_ARTIFACT_TEMPLATE} | sed "s/%VERSION%/${BUILD_VERSION}/g")
+          echo RELEASE_VERSION=${BUILD_VERSION} >> $GITHUB_ENV
+          echo ARTIFACT=$(echo ${DOCS_ARTIFACT_TEMPLATE} | sed "s/%VERSION%/${BUILD_VERSION}/g") >> $GITHUB_ENV
       - name: Check env
         run: |
           echo Artifact: ${{ env.ARTIFACT }}
@@ -48,11 +48,11 @@ jobs:
 
       - name: Set env
         run: |
-          echo "::set-env name=RELEASE_VERSION::$("$Env:BUILD_VERSION")"
-          echo "::set-env name=RELEASE_VERSION_TRUNCATED::$("$Env:BUILD_VERSION" -replace '[a-zA-Z-]', '')"
-          echo "::set-env name=ARTIFACT::$(echo $Env:WINDOWS_ARTIFACT_TEMPLATE | %{$_ -replace '#VERSION#', $("$Env:BUILD_VERSION") })"
-          echo "::set-env name=WB_ARTIFACT::$(echo $Env:WINDOWS_BUILD_TEMPLATE | %{$_ -replace '#VERSION#', $("$Env:BUILD_VERSION" -replace '[a-zA-Z-]', '') })"
-          echo "::set-env name=C_API_REPO::$(echo $Env:C_API_REPO)"
+          echo RELEASE_VERSION=$("$Env:BUILD_VERSION") | Add-Content -Path $env:GITHUB_ENV -Encoding utf8
+          echo RELEASE_VERSION_TRUNCATED=$("$Env:BUILD_VERSION" -replace '[a-zA-Z-]', '') | Add-Content -Path $env:GITHUB_ENV -Encoding utf8
+          echo ARTIFACT=$(echo $Env:WINDOWS_ARTIFACT_TEMPLATE | %{$_ -replace '#VERSION#', $("$Env:BUILD_VERSION") }) | Add-Content -Path $env:GITHUB_ENV -Encoding utf8
+          echo WB_ARTIFACT=$(echo $Env:WINDOWS_BUILD_TEMPLATE | %{$_ -replace '#VERSION#', $("$Env:BUILD_VERSION" -replace '[a-zA-Z-]', '') }) | Add-Content -Path $env:GITHUB_ENV -Encoding utf8
+          echo C_API_REPO=$("$Env:C_API_REPO") | Add-Content -Path $env:GITHUB_ENV -Encoding utf8
 
       - name: Check env
         run: |
