--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -27,8 +27,8 @@ jobs:
       - uses: actions/checkout@master
       - name: Set env
         run: |
-          echo ::set-env name=RELEASE_VERSION::$(echo ${GITHUB_REF:10})
-          echo ::set-env name=ARTIFACT::$(echo ${DOCS_ARTIFACT_TEMPLATE} | sed "s/%VERSION%/$(echo ${GITHUB_REF:10})/g" )
+          echo RELEASE_VERSION=$(echo ${GITHUB_REF:10}) >> $GITHUB_ENV
+          echo ARTIFACT=$(echo ${DOCS_ARTIFACT_TEMPLATE} | sed "s/%VERSION%/$(echo ${GITHUB_REF:10})/g" ) >> $GITHUB_ENV
       - name: Check env
         run: |
           echo Artifact: ${{ env.ARTIFACT }}
@@ -55,12 +55,12 @@ jobs:
 
       - name: Set env
         run: |
-          echo "::set-env name=RELEASE_VERSION::$("$Env:GITHUB_REF".Substring(10))"
-          echo "::set-env name=RELEASE_VERSION_TRUNCATED::$("$Env:GITHUB_REF".Substring(10) -replace '[a-zA-Z-]', '')"
-          echo "::set-env name=ARTIFACT::$(echo $Env:WINDOWS_ARTIFACT_TEMPLATE | %{$_ -replace '#VERSION#', $("$Env:GITHUB_REF".Substring(10)) })"
-          echo "::set-env name=WB_ARTIFACT::$(echo $Env:WINDOWS_BUILD_TEMPLATE | %{$_ -replace '#VERSION#', $("$Env:GITHUB_REF".Substring(10) -replace '[a-zA-Z-]', '') })"
-          echo "::set-env name=C_API_REPO::$(echo $Env:C_API_REPO)"
-          echo "::set-env name=C_API_RELEASE::$(echo $Env:C_API_RELEASE_TEMPLATE | %{$_ -replace '#VERSION#', $("$Env:GITHUB_REF".Substring(10)) })"
+          echo RELEASE_VERSION=$("$Env:GITHUB_REF".Substring(10)) | Add-Content -Path $env:GITHUB_ENV -Encoding utf8
+          echo RELEASE_VERSION_TRUNCATED=$("$Env:GITHUB_REF".Substring(10) -replace '[a-zA-Z-]', '') | Add-Content -Path $env:GITHUB_ENV -Encoding utf8
+          echo ARTIFACT=$(echo $Env:WINDOWS_ARTIFACT_TEMPLATE | %{$_ -replace '#VERSION#', $("$Env:GITHUB_REF".Substring(10)) }) | Add-Content -Path $env:GITHUB_ENV -Encoding utf8
+          echo WB_ARTIFACT=$(echo $Env:WINDOWS_BUILD_TEMPLATE | %{$_ -replace '#VERSION#', $("$Env:GITHUB_REF".Substring(10) -replace '[a-zA-Z-]', '') }) | Add-Content -Path $env:GITHUB_ENV -Encoding utf8
+          echo C_API_REPO=$(echo $Env:C_API_REPO) | Add-Content -Path $env:GITHUB_ENV -Encoding utf8
+          echo C_API_RELEASE=$(echo $Env:C_API_RELEASE_TEMPLATE | %{$_ -replace '#VERSION#', $("$Env:GITHUB_REF".Substring(10)) }) | Add-Content -Path $env:GITHUB_ENV -Encoding utf8
 
       - name: Check env
         run: |
@@ -116,9 +116,9 @@ jobs:
 
       - name: Set env
         run: |
-          echo ::set-env name=RELEASE_VERSION::$(echo ${GITHUB_REF:10})
-          echo ::set-env name=DOC_ARTIFACT::$(echo ${DOCS_ARTIFACT_TEMPLATE} | sed "s/%VERSION%/$(echo ${GITHUB_REF:10})/g").zip
-          echo ::set-env name=WINDOWS_ARTIFACT::$(echo ${WINDOWS_ARTIFACT_TEMPLATE} | sed "s/#VERSION#/$(echo ${GITHUB_REF:10})/g").zip
+          echo RELEASE_VERSION=$(echo ${GITHUB_REF:10}) >> $GITHUB_ENV
+          echo DOC_ARTIFACT=$(echo ${DOCS_ARTIFACT_TEMPLATE} | sed "s/%VERSION%/$(echo ${GITHUB_REF:10})/g").zip >> $GITHUB_ENV
+          echo WINDOWS_ARTIFACT=$(echo ${WINDOWS_ARTIFACT_TEMPLATE} | sed "s/#VERSION#/$(echo ${GITHUB_REF:10})/g").zip >> $GITHUB_ENV
 
       - name: Check env
         run: |
