--- a/dxfeed-api-config.sample.toml
+++ b/dxfeed-api-config.sample.toml
@@ -4,3 +4,6 @@ network.heartbeatPeriod = 10
 # Timeout for receiving messages from the server, after which the api tries to change the server and/or reconnect
 #   (default value = 120 seconds)
 network.heartbeatTimeout = 120
+
+# Minimum logging level. Possible values: "error", "warn", "info", "debug", "trace". Default value = "info"
+logger.level = "info"
