[DXFC-221] Add the ability to receive incremental snapshot changes

--- a/dxf_api/dxf_api.csproj
+++ b/dxf_api/dxf_api.csproj
@@ -152,6 +152,7 @@
     <Compile Include="src\listeners\event\IDxTradeEthListener.cs" />
     <Compile Include="src\listeners\event\IDxEventListener.cs" />
     <Compile Include="src\listeners\snapshot\IDxGreeksSnapshotListener.cs" />
+    <Compile Include="src\listeners\snapshot\IDxOrderIncSnapshotListener.cs" />
     <Compile Include="src\listeners\snapshot\IDxSeriesSnapshotListener.cs" />
     <Compile Include="src\listeners\snapshot\IDxSpreadOrderSnapshotListener.cs" />
     <Compile Include="src\listeners\snapshot\IDxTimeAndSaleSnapshotListener.cs" />
