[DXFC-222] Create wrapper for PriceLevelBook

--- a/dxf_api/dxf_api.csproj
+++ b/dxf_api/dxf_api.csproj
@@ -124,6 +124,7 @@
     <Compile Include="src\events\DxPriceLevelBook.cs" />
     <Compile Include="src\extras\EventPrinter.cs" />
     <Compile Include="src\extras\TimeConverter.cs" />
+    <Compile Include="src\IDxPriceLevelBook.cs" />
     <Compile Include="src\IDxRegionalBook.cs" />
     <Compile Include="src\listeners\event\IDxCandleListener.cs" />
     <Compile Include="src\listeners\event\IDxGreeksListener.cs" />
@@ -146,6 +147,7 @@
     <Compile Include="src\events\IDxTrade.cs" />
     <Compile Include="src\IDxConnection.cs" />
     <Compile Include="src\listeners\event\IDxUnderlyingListener.cs" />
+    <Compile Include="src\listeners\IDxPriceLevelBookListener.cs" />
     <Compile Include="src\listeners\IDxRegionalBookListener.cs" />
     <Compile Include="src\listeners\snapshot\IDxCandleSnapshotListener.cs" />
     <Compile Include="src\listeners\event\IDxSpreadOrderListener.cs" />
