--- a/dxf_native/dxf_native.csproj
+++ b/dxf_native/dxf_native.csproj
@@ -75,6 +75,7 @@
     <Compile Include="src\api\DXFeedEventHandler.cs" />
     <Compile Include="src\api\DXFeedTimeSeriesSubscription.cs" />
     <Compile Include="src\events\NativeSpreadOrder.cs" />
+    <Compile Include="src\NativePriceLevelBook.cs" />
     <Compile Include="src\NativeRegionalBook.cs" />
     <Compile Include="src\native\C.cs" />
     <Compile Include="src\native\C32.cs" />
