[DXFC-220] Add the ability to retreive events starting from a specific date and ending with a specific date.

--- a/dxf_native/dxf_native.csproj
+++ b/dxf_native/dxf_native.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\api\DXFeedEventHandler.cs" />
     <Compile Include="src\api\DXFeedTimeSeriesSubscription.cs" />
+    <Compile Include="src\SnapshotDataProvider.cs" />
     <Compile Include="src\events\NativeSpreadOrder.cs" />
     <Compile Include="src\NativePriceLevelBook.cs" />
     <Compile Include="src\NativeRegionalBook.cs" />
