[DXFC-220] Add the ability to retreive events starting from a specific date and ending with a specific date.

--- a/dxf_master/dxf_master.csproj
+++ b/dxf_master/dxf_master.csproj
@@ -116,6 +116,10 @@
       <Name>dxf_simple_order_book_sample</Name>
       <Label>BuildPublish</Label>
     </ProjectReference>
+    <ProjectReference Include="..\samples\dxf_simple_data_retrieving_sample\dxf_simple_data_retrieving_sample.csproj">
+      <Name>dxf_simple_data_retrieving_sample</Name>
+      <Label>BuildPublish</Label>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="..\lib\DXFeedd.dll">
