--- a/dxf_master/dxf_master.csproj
+++ b/dxf_master/dxf_master.csproj
@@ -60,6 +60,10 @@
       <Name>dxf_candle_sample</Name>
       <Label>BuildPublish</Label>
     </ProjectReference>
+    <ProjectReference Include="..\samples\dxf_candle_data_retrieving_sample\dxf_candle_data_retrieving_sample.csproj">
+      <Name>dxf_candle_data_retrieving_sample</Name>
+      <Label>BuildPublish</Label>
+    </ProjectReference>
     <ProjectReference Include="..\samples\dxf_events_sample\dxf_events_sample.csproj">
       <Name>dxf_events_sample</Name>
       <Label>BuildPublish</Label>
