[DXFC-260] Add the ability to retrieve TnS data from CandleWebService

--- a/dxf_native/dxf_native.csproj
+++ b/dxf_native/dxf_native.csproj
@@ -78,7 +78,9 @@
     <Compile Include="src\api\DXFeedEventHandler.cs" />
     <Compile Include="src\api\DXFeedTimeSeriesSubscription.cs" />
     <Compile Include="src\CandleDataConnection.cs" />
+    <Compile Include="src\DataConnection.cs" />
     <Compile Include="src\SimpleCandleDataProvider.cs" />
+    <Compile Include="src\SimpleTimeAndSaleDataProvider.cs" />
     <Compile Include="src\SnapshotDataProvider.cs" />
     <Compile Include="src\events\NativeSpreadOrder.cs" />
     <Compile Include="src\NativePriceLevelBook.cs" />
@@ -117,6 +119,7 @@
     <Compile Include="src\NativeTools.cs" />
     <Compile Include="src\OrderEventBuffer.cs" />
     <Compile Include="src\OrderViewSubscription.cs" />
+    <Compile Include="src\TimeAndSaleDataConnection.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
