[DXFC-260] Add the ability to retrieve TnS data from CandleWebService

--- a/dxf_api/dxf_api.csproj
+++ b/dxf_api/dxf_api.csproj
@@ -95,6 +95,7 @@
     <Compile Include="src\data\OrderAction.cs" />
     <Compile Include="src\events\IDxTradeETH.cs" />
     <Compile Include="src\events\IndexedEventSource.cs" />
+    <Compile Include="src\events\INormalizable.cs" />
     <Compile Include="src\events\market\MarketEventSymbols.cs" />
     <Compile Include="src\data\Direction.cs" />
     <Compile Include="src\data\PriceType.cs" />
