--- a/samples/dxf_ipf_connect_sample/dxf_ipf_connect_sample.csproj
+++ b/samples/dxf_ipf_connect_sample/dxf_ipf_connect_sample.csproj
@@ -11,6 +11,7 @@
     <AssemblyName>dxf_ipf_connect_sample</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <LangVersion>6</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
