--- a/samples/dxf_tns_data_retrieving_sample/dxf_tns_data_retrieving_sample.csproj
+++ b/samples/dxf_tns_data_retrieving_sample/dxf_tns_data_retrieving_sample.csproj
@@ -12,6 +12,7 @@
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
+    <LangVersion>6</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
