[DXFC-298] PriceLevelBook improvements

--- a/dxf_native/dxf_native.csproj
+++ b/dxf_native/dxf_native.csproj
@@ -57,6 +57,7 @@
     <Compile Include="src\api\DXFeedTimeSeriesSubscription.cs" />
     <Compile Include="src\CandleDataConnection.cs" />
     <Compile Include="src\DataConnection.cs" />
+    <Compile Include="src\PriceLevelBook.cs" />
     <Compile Include="src\SimpleCandleDataProvider.cs" />
     <Compile Include="src\SimpleTimeAndSaleDataProvider.cs" />
     <Compile Include="src\SnapshotDataProvider.cs" />
