--- a/dxf_api/dxf_api.csproj
+++ b/dxf_api/dxf_api.csproj
@@ -108,6 +108,7 @@
     <Compile Include="src\IDxCandleDataConnection.cs" />
     <Compile Include="src\IDxDataConnection.cs" />
     <Compile Include="src\IDxPriceLevelBook.cs" />
+    <Compile Include="src\IPriceLevelBook.cs" />
     <Compile Include="src\IDxRegionalBook.cs" />
     <Compile Include="src\IDxTimeAndSaleDataConnection.cs" />
     <Compile Include="src\listeners\event\IDxCandleListener.cs" />
@@ -133,6 +134,9 @@
     <Compile Include="src\listeners\event\IDxUnderlyingListener.cs" />
     <Compile Include="src\listeners\IDxPriceLevelBookListener.cs" />
     <Compile Include="src\listeners\IDxRegionalBookListener.cs" />
+    <Compile Include="src\listeners\plb\IDxOnNewPriceLevelBookHandler.cs" />
+    <Compile Include="src\listeners\plb\IDxOnPriceLevelBookUpdateHandler.cs" />
+    <Compile Include="src\listeners\plb\IDxOnPriceLevelBookIncChangeHandler.cs" />
     <Compile Include="src\listeners\snapshot\IDxCandleSnapshotListener.cs" />
     <Compile Include="src\listeners\event\IDxSpreadOrderListener.cs" />
     <Compile Include="src\listeners\event\IDxTradeEthListener.cs" />
@@ -175,7 +179,6 @@
     <Compile Include="src\util\StringUtil.cs" />
     <Compile Include="src\util\TimePeriod.cs" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
